build: add Checker Framework nullness checking